# flowerhub-portal-api_python-lib

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  API_DOCUMENTATION.md  CHANGELOG.md  README.md  RELEASE_ATTESTATION.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  run_example.py  secrets.json  simple_run.py
.github/workflows/: ci.yml  deploy-docs.yml  pre-commit.yml  release.yml
docs/: REST_API_specification.md  index.md  usage.md
docs/api/: async_client.md
docs/interfaces/: types.md  uptime_pie.md
examples/: auth_error_handling.py  run_example.py  simulated_run.py
flowerhub_portal_api_client/: __init__.py  async_client.py  parsers.py  types.py
scripts/: pre_commit_all.sh  test-HA_integration.sh  test.sh
tests/: test_async_client.py  test_client.py
