[project]
name = "flowerhub-portal-api-client"
version = "0.2.0"
description = "Lightweight Flowerhub portal client (synchronous and async)"
readme = "README.md"
authors = [ { name="Your Name", email="you@example.com" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8"]

[tool.ruff]
line-length = 88
exclude = [".venv", "__pycache__", "build", "dist", "custom_components/**"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
